--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3930,6 +3930,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   padding-top: 10px;
   padding-bottom: 10px;
   line-height: 20px;
+  font-size: 16px;
 }
 @media (max-width: 767px) {
   .navbar-nav .open .dropdown-menu {
